--- a/templates/search.html
+++ b/templates/search.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-	<link rel="stylesheet" href="{% static 'css/grayscale.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/grayscale.css' %}">
     <!--<link href="css/grayscale.min.css" rel="stylesheet">-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -56,13 +56,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Search</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Results</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Rate</a>
                     </li>
                 </ul>
             </div>
@@ -79,10 +79,10 @@
                     <div class="col-md-8 col-md-offset-2">
                             <p class="intro-text">Type in what you want to search.
                             <br>Not everything posted on the web is 100% true.</p>
-							<form action="" method="post">
+							<form action="/searchengine/query/" method="post">
 							{% csrf_token %}
 								<div class="form-group">
-									<input style="color: #C0C0C0;" type="text" name="term" size="30"> <input href="about" id="submitbtn" type="submit" value="Search" class="btn btn-danger page-scroll">
+									<input style="color: #C0C0C0;" type="text" value="{{a}}" name="term" size="30"> <input href="about" id="submitbtn" type="submit" value="Search" class="btn btn-danger page-scroll">
 								</div>
 							</form><hr>
 														
@@ -99,15 +99,17 @@
     </header>
 
     <!-- <!-- <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="results" class="container results-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
 										
 
 							<p>You should look into</p> <br/>
 							{% for res in result %}
-							<p><li><a href="{{ res.href }}">{{ res.formattedUrl}}</a></li>
-							<li>{{ res.snippet}}</li></p>
+							<p>
+							<ul align="left"><a href="{{ res.formattedUrl }}">{{ res.formattedUrl}}</a></ul>
+							<ul align="left">{{ res.snippet}}</ul>
+							</p>
 							{% endfor %}
 							</div>
 							
@@ -117,9 +119,83 @@
             </div>
         </div>
     </section>
+    <section id="rate" class="container rate-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 ">
+                            <h3>Rate the results according to utility</h3>            
+                            <form action>
+                            <div class="rating">
+                            
+                            <h6>Rate result <br>
+                            <span><input type="radio" name="rating" id="str1" value="1">1</span>
+                            <span><input type="radio" name="rating" id="str2" value="2">2</span>
+                            <span><input type="radio" name="rating" id="str3" value="3">3</span>
+							<span><input type="radio" name="rating" id="str4" value="4">4</span>
+                            <span><input type="radio" name="rating" id="str5" value="5">5</span>
+                            
+							
+							
+							</h6>
+
+                            <h6> Rate result 2 <br>
+                            <span><input type="radio" name="rating2" id="str1" value="1">1</span>
+                            <span><input type="radio" name="rating2" id="str2" value="2">2</span>
+                            <span><input type="radio" name="rating2" id="str3" value="3">3</span>
+                            </h6>
+
+                            <h6> Rate result 3 <br>
+                            <input type="radio" name="rating3" id="str1" value="1">1
+                            <input type="radio" name="rating3" id="str2" value="2">2
+                            <input type="radio" name="rating3" id="str3" value="3">3
+                            </h6>
+                            <div class="conatainer">
+                            <input type="button" class ="btn btn-success" onclick="submitRating()" value="Rate" />
+                            </div>
+                            <br>
+                            <h6>
+
+                            <div id="divResult"></div>
+                            </h6>
+
+                            </div>
+                            </form>
+                            
+            
+                
+            </div>
+        </div>
+    </section>
 
    
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
 
+    
+});
+function submitRating()
+{
+    val1 = $('input[name=rating]:checked').val();
+    //val2 = $('input[name=rating2]:checked').val();
+    //val3 = $('input[name=rating3]:checked').val();
+	//val4 = $('input[name=rating3]:checked').val();
+	
+	
+
+    //alert("val1: " + val1 + " val2: " + val2);
+    $.ajax({
+        url: '/searchengine/searchradio/',
+        type: 'POST',
+        data: { val1: val1},// val2 : val2, val3 : val3} ,
+        success: function (response) {
+            $("#divResult").html(response);
+        },
+        error: function () {
+            alert("error");
+        }
+    });
+}
+</script>
     <!--<section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
